[project]
name = "langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-tavily>=0.2.3",
    "langgraph>=0.4.8",
    "langgraph-cli[imem,inmem]>=0.3.3",
    "langsmith>=0.3.45",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.0",
]

[tool.uv.workspace]
members = [
    "3-MCPDEMO",
]

